# ThreadpoolPOC

./: .editorconfig  .gitignore  CMakeLists.txt  Readme.md  configure.bat  thirdparties.cmake  threadpool.md
cmake/: CPM.cmake  assign_source_group.cmake
src/: BoundedMpmcQueue.h  BoundedQueue.h  CMakeLists.txt  MemoryPoolAllocator.cpp  MemoryPoolAllocator.h  TaskScheduler.h  ThreadPool.cpp  ThreadPool.h  WorkStealingBoundedQueue.h
src/ThreadPool/: AlignedMalloc.c  AlignedMalloc.h  BoundedMpmcQueue.h  MemoryPoolAllocator.cpp  MemoryPoolAllocator.h  TaskScheduler.cpp  TaskScheduler.h  ThreadPlatform.h  ThreadPool.cpp  ThreadPool.h
tests/: CMakeLists.txt  deploy_tests.cmake  main.cpp  test_memoryPool.cpp  test_pool.cpp  test_queue.cpp
